--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "docker-build": "docker build . --tag sf-auto-oauth"
   },
   "author": "Aurel Hudec",
   "license": "MIT",
@@ -12,6 +12,7 @@
     "@salesforce/core": "^3.34.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "selenium-webdriver": "^4.8.1"
+    "selenium-webdriver": "^4.8.1",
+    "winston": "^3.8.2"
   }
 }
