--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@salesforce/core": "^5.3.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.1",
     "selenium-webdriver": "^4.14.0",
     "winston": "^3.11.0"
   }
